--- a/MyWeight/Base.lproj/Main.storyboard
+++ b/MyWeight/Base.lproj/Main.storyboard
@@ -1,24 +1,141 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="oVc-Aw-tnl">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Item-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MyWeight" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qq9-7t-rlF">
+                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="Izy-La-g2p"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Btu-6w-NrG"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="qq9-7t-rlF" secondAttribute="trailing" id="9go-jg-O5Q"/>
+                            <constraint firstItem="qq9-7t-rlF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="FPG-Zd-V2L"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="qq9-7t-rlF" secondAttribute="bottom" id="TW3-1H-Rhg"/>
+                            <constraint firstItem="qq9-7t-rlF" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="t2k-58-zf9"/>
+                        </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="f1d-F8-LRT"/>
+                    <connections>
+                        <outlet property="tableView" destination="qq9-7t-rlF" id="Tck-fb-tA9"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="886" y="-534"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="4qH-BY-mre">
+            <objects>
+                <viewController id="2SX-cc-65n" customClass="DishesViewController" customModule="MyWeight" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="pqt-Ed-JT6">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="aX2-5l-In1">
+                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="2SX-cc-65n" id="L50-MS-lce"/>
+                                    <outlet property="delegate" destination="2SX-cc-65n" id="hiJ-T5-bR2"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="4eJ-Lc-mIA"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="aX2-5l-In1" firstAttribute="top" secondItem="4eJ-Lc-mIA" secondAttribute="top" id="3Ea-5X-Thv"/>
+                            <constraint firstItem="4eJ-Lc-mIA" firstAttribute="trailing" secondItem="aX2-5l-In1" secondAttribute="trailing" id="Njx-SE-cnw"/>
+                            <constraint firstItem="aX2-5l-In1" firstAttribute="leading" secondItem="4eJ-Lc-mIA" secondAttribute="leading" id="jTB-Un-1iR"/>
+                            <constraint firstItem="4eJ-Lc-mIA" firstAttribute="bottom" secondItem="aX2-5l-In1" secondAttribute="bottom" id="thP-Tx-M1M"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="XV2-gM-VIR"/>
+                    <connections>
+                        <outlet property="tableView" destination="aX2-5l-In1" id="w4z-8k-oZA"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Zjn-yY-oQI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="886" y="145"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="9SH-SG-uqL">
+            <objects>
+                <viewController id="k6P-fK-4rb" customClass="ProfileViewController" customModule="MyWeight" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="nGE-cr-5k6">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="LK1-IL-VkL">
+                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="k6P-fK-4rb" id="NNW-vD-bRS"/>
+                                    <outlet property="delegate" destination="k6P-fK-4rb" id="O09-jn-C6Y"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="GZs-Mq-TFm"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="LK1-IL-VkL" firstAttribute="leading" secondItem="GZs-Mq-TFm" secondAttribute="leading" id="Ahi-lq-BVO"/>
+                            <constraint firstItem="LK1-IL-VkL" firstAttribute="top" secondItem="GZs-Mq-TFm" secondAttribute="top" id="FOW-oc-lXQ"/>
+                            <constraint firstItem="GZs-Mq-TFm" firstAttribute="trailing" secondItem="LK1-IL-VkL" secondAttribute="trailing" id="Ugn-ao-db6"/>
+                            <constraint firstItem="GZs-Mq-TFm" firstAttribute="bottom" secondItem="LK1-IL-VkL" secondAttribute="bottom" id="iic-yw-shi"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="yQ0-Ou-OUe"/>
+                    <connections>
+                        <outlet property="tableView" destination="LK1-IL-VkL" id="sIL-3b-jF0"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ivW-U3-YWY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="946" y="852"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="IE4-2Q-jv2">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="oVc-Aw-tnl" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="FwU-GV-Y7U">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="3iJ-4b-Mus"/>
+                        <segue destination="2SX-cc-65n" kind="relationship" relationship="viewControllers" id="OsV-9e-nxY"/>
+                        <segue destination="k6P-fK-4rb" kind="relationship" relationship="viewControllers" id="stX-mZ-xQp"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uX0-oa-kWP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="86.956521739130437" y="78.348214285714278"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
